--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <h1> Blogs Mania </h1>
+    <h1> Blogs Mania : Tuq Challenge </h1>
     <%= yield %>
   </body>
 </html>
