--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/nav' %>
 
-<h2> Welcome <%= @user.name %> </h2>
+<h2 style="color: green;"> Welcome <%= @user.name %>  !!! </h2>
 
 
 <h3> <b> <%= link_to 'Create New Blog', new_blog_path %> <b> </h3>
