--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <%= render 'shared/nav' %>
 
+<p> Logged in as: <%= @user.name %> </p>
 
 <h4>
   <strong>Title:</strong>
