--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,4 +13,10 @@
     <h1> Blogs Mania : Tuq Challenge </h1>
     <%= yield %>
   </body>
+
+  <br>
+  <br>
+  <footer>
+    <p> Created By Minhal Shanjer for Tuq. Job position: Backend Developer <p>
+  </footer>
 </html>
