--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,9 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name %> 
+    (lowercase please)
+    <br>
     <%= form.text_field :name %>
   </div>
 
